--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.navbar {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+  max-width: 100%;
+  border-bottom: 1px solid #614BC3;
+}
+
+.navbar h1 {
+  color: #614BC3;
+  font-family: 'Varela Round', sans-serif;
+  margin: 1rem 0;
+}
+
+.navbar .links {
+  margin-left: auto;
+  width: 20%;
+}
+
+.navbar a {
+ margin-left: 2.5rem;
+ padding: 3rem;
+ text-decoration: none;
+}
+
+.content {
+  max-width: 100%;
+  margin: 2rem auto;
+  padding: 1rem;
 }
