--- a/src/index.css
+++ b/src/index.css
@@ -3,35 +3,40 @@
 * {
   box-sizing: border-box;
   margin: 0;
+  font-family: 'Varela Round', sans-serif;
 }
 
 .navbar {
   display: flex;
   align-items: center;
   margin: 0 auto;
-  max-width: 100%;
-  border-bottom: 1px solid #614BC3;
+  max-width: 80%;
+  border-bottom: 3px solid #c3b8f1;
 }
 
 .navbar h1 {
   color: #614BC3;
-  font-family: 'Varela Round', sans-serif;
-  margin: 1rem 0;
+  font-size: 3rem;
+  margin: 1.5rem 0;
 }
 
 .navbar .links {
   margin-left: auto;
-  width: 20%;
+  font-size: 1.2rem;
+}
+.navbar a:hover {
+  color: black;
 }
 
 .navbar a {
  margin-left: 2.5rem;
  padding: 3rem;
+ color: grey;
  text-decoration: none;
 }
 
 .content {
-  max-width: 100%;
+  max-width: 80%;
   margin: 2rem auto;
   padding: 1rem;
 }
