--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@
 }
 
 .navbar h1 {
-  color: #614BC3;
+  color: #6F61C0;
   font-size: 3rem;
   margin: 1.5rem 0;
 }
@@ -39,4 +39,24 @@
   max-width: 80%;
   margin: 2rem auto;
   padding: 1rem;
+}
+
+.blog-preview {
+  margin: 2rem 0;
+  padding: 10px;
+  border-bottom: 3px solid #fafafa;
+}
+
+.blog-preview:hover {
+ box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+.blog-preview h2 {
+  margin-bottom: 2rem;
+  font-size: 2rem;
+  color: #A084E8;
+}
+
+.blog-body {
+  padding-bottom: 2rem;
 }
